mpich-4.3.2/src/mpi/romio/include/romio_abi_internal.h

typedef MPI_ABI_Aint MPI_Aint;
typedef MPI_ABI_Offset MPI_Offset;
typedef struct MPI_ABI_Comm* MPI_Comm;
typedef struct MPI_ABI_Group* MPI_Group;
typedef struct ADIOI_FileD *MPI_File;
typedef struct MPI_ABI_Info* MPI_Info;
typedef struct MPI_ABI_Datatype* MPI_Datatype;
typedef void (MPI_User_function)(void *invec, void *inoutvec, int *len, MPI_Datatype *datatype);
typedef void (MPI_User_function_c)(void *invec, void *inoutvec, MPI_Count *len, MPI_Datatype *datatype);
typedef void (MPIX_User_function_x) ( void *invec, void *inoutvec, MPI_Count count, MPI_Datatype datatype, void *extra_state);
typedef int (MPI_Grequest_query_function)(void *extra_state, MPI_Status *status);
typedef int (MPI_Grequest_free_function)(void *extra_state);
typedef int (MPI_Grequest_cancel_function)(void *extra_state, int complete);
typedef int (MPI_Copy_function)(MPI_Comm comm, int keyval, void *extra_state, void *attribute_val_in, void *attribute_val_out, int *flag); /* deprecated: MPI-2.0 */
typedef int (MPI_Delete_function)(MPI_Comm omm, int keyval, void *attribute_val, void *extra_state); /* deprecated: MPI-2.0 */
typedef int (MPI_Comm_copy_attr_function)(MPI_Comm comm, int keyval, void *extra_state, void *attribute_val_in, void *attribute_val_out, int *flag);
typedef int (MPI_Comm_delete_attr_function)(MPI_Comm comm, int keyval, void *attribute_val, void *extra_state);
typedef int (MPI_Type_copy_attr_function)(MPI_Datatype datatype, int keyval, void *extra_state, void *attribute_val_in, void *attribute_val_out, int *flag);
typedef int (MPI_Type_delete_attr_function)(MPI_Datatype datatype, int keyval, void *attribute_val, void *extra_state);
typedef int (MPI_Win_copy_attr_function)(MPI_Win win, int keyval, void *extra_state, void *attribute_val_in, void *attribute_val_out, int *flag);
typedef int (MPI_Win_delete_attr_function)(MPI_Win win, int keyval, void *attribute_val, void *extra_state);
typedef int (MPI_Datarep_extent_function)(MPI_Datatype datatype, MPI_Aint *extent, void *extra_state);
typedef int (MPI_Datarep_conversion_function)(void *userbuf, MPI_Datatype datatype, int count, void *filebuf, MPI_Offset position, void *extra_state);
typedef int (MPI_Datarep_conversion_function_c)(void *userbuf, MPI_Datatype datatype, MPI_Count count, void *filebuf, MPI_Offset position, void *extra_state);
typedef void (MPI_Comm_errhandler_function)(MPI_Comm *comm, int *error_code, ...);
typedef void (MPI_File_errhandler_function)(MPI_File *file, int *error_code, ...);
typedef void (MPI_Win_errhandler_function)(MPI_Win *win, int *error_code, ...);
typedef void (MPI_Session_errhandler_function)(MPI_Session *session, int *error_code, ...);
typedef void (MPIX_Comm_errhandler_function_x)(MPI_Comm comm, int error_code, void *extra_state);
typedef void (MPIX_File_errhandler_function_x)(MPI_File file, int error_code, void *extra_state);
typedef void (MPIX_Win_errhandler_function_x)(MPI_Win win, int error_code, void *extra_state);
typedef void (MPIX_Session_errhandler_function_x)(MPI_Session session, int error_code, void *extra_state);
typedef void (MPIX_Destructor_function) (void *extra_state);
typedef void (MPI_T_event_cb_function)(MPI_T_event_instance event_instance, MPI_T_event_registration event_registration, MPI_T_cb_safety cb_safety, void *user_data);
typedef void (MPI_T_event_free_cb_function)(MPI_T_event_registration event_registration, MPI_T_cb_safety cb_safety, void *user_data);
typedef void (MPI_T_event_dropped_cb_function)(MPI_Count count, MPI_T_event_registration event_registration, int source_index, MPI_T_cb_safety cb_safety, void *user_data);
int PMPI_File_delete(const char *filename, MPI_Info info) ROMIO_API_PUBLIC;
int PMPI_File_get_amode(MPI_File fh, int *amode) ROMIO_API_PUBLIC;
int PMPI_File_get_atomicity(MPI_File fh, int *flag) ROMIO_API_PUBLIC;
int PMPI_File_get_byte_offset(MPI_File fh, MPI_Offset offset, MPI_Offset *disp) ROMIO_API_PUBLIC;
int PMPI_File_get_group(MPI_File fh, MPI_Group *group) ROMIO_API_PUBLIC;
int PMPI_File_get_info(MPI_File fh, MPI_Info *info_used) ROMIO_API_PUBLIC;
int PMPI_File_get_position(MPI_File fh, MPI_Offset *offset) ROMIO_API_PUBLIC;
int PMPI_File_get_position_shared(MPI_File fh, MPI_Offset *offset) ROMIO_API_PUBLIC;
int PMPI_File_get_size(MPI_File fh, MPI_Offset *size) ROMIO_API_PUBLIC;
int PMPI_File_get_type_extent(MPI_File fh, MPI_Datatype datatype, MPI_Aint *extent) ROMIO_API_PUBLIC;
int PMPI_File_get_view(MPI_File fh, MPI_Offset *disp, MPI_Datatype *etype, MPI_Datatype *filetype, char *datarep) ROMIO_API_PUBLIC;
int PMPI_File_open(MPI_Comm comm, const char *filename, int amode, MPI_Info info, MPI_File *fh) ROMIO_API_PUBLIC;
int PMPI_File_preallocate(MPI_File fh, MPI_Offset size) ROMIO_API_PUBLIC;
int PMPI_File_seek(MPI_File fh, MPI_Offset offset, int whence) ROMIO_API_PUBLIC;
int PMPI_File_seek_shared(MPI_File fh, MPI_Offset offset, int whence) ROMIO_API_PUBLIC;
int PMPI_File_set_atomicity(MPI_File fh, int flag) ROMIO_API_PUBLIC;
int PMPI_File_set_info(MPI_File fh, MPI_Info info) ROMIO_API_PUBLIC;
int PMPI_File_set_size(MPI_File fh, MPI_Offset size) ROMIO_API_PUBLIC;
int PMPI_File_set_view(MPI_File fh, MPI_Offset disp, MPI_Datatype etype, MPI_Datatype filetype, const char *datarep, MPI_Info info) ROMIO_API_PUBLIC;
int PMPI_File_sync(MPI_File fh) ROMIO_API_PUBLIC;
int PMPI_Register_datarep(const char *datarep, MPI_Datarep_conversion_function *read_conversion_fn, MPI_Datarep_conversion_function *write_conversion_fn, MPI_Datarep_extent_function *dtype_file_extent_fn, void *extra_state) ROMIO_API_PUBLIC;
int PMPI_Register_datarep_c(const char *datarep, MPI_Datarep_conversion_function_c *read_conversion_fn, MPI_Datarep_conversion_function_c *write_conversion_fn, MPI_Datarep_extent_function *dtype_file_extent_fn, void *extra_state) ROMIO_API_PUBLIC;
typedef int (MPIX_Grequest_poll_function)(void *, MPI_Status *);
typedef int (MPIX_Grequest_wait_function)(int, void **, double, MPI_Status *);