mpich-4.3.2/src/binding/fortran/use_mpi_f08/mpi_c_interface_nobuf.f90


FUNCTION MPIR_File_delete_c(filename, info) &
    bind(C, name="PMPI_File_delete") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int, c_char
    USE :: mpi_c_interface_types, ONLY : c_Info
    IMPLICIT NONE
    character(kind=c_char), INTENT(in) :: filename(*)
    INTEGER(c_Info), VALUE, INTENT(in) :: info
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_delete_c

FUNCTION MPIR_File_get_amode_c(fh, amode) &
    bind(C, name="PMPI_File_get_amode") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_c_interface_types, ONLY : c_File
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(c_int), INTENT(out) :: amode
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_get_amode_c

FUNCTION MPIR_File_get_atomicity_c(fh, flag) &
    bind(C, name="PMPI_File_get_atomicity") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_c_interface_types, ONLY : c_File
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(c_int), INTENT(out) :: flag
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_get_atomicity_c

FUNCTION MPIR_File_get_byte_offset_c(fh, offset, disp) &
    bind(C, name="PMPI_File_get_byte_offset") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_f08_compile_constants, ONLY : MPI_OFFSET_KIND
    USE :: mpi_c_interface_types, ONLY : c_File
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(KIND=MPI_OFFSET_KIND), VALUE, INTENT(in) :: offset
    INTEGER(KIND=MPI_OFFSET_KIND), INTENT(out) :: disp
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_get_byte_offset_c

FUNCTION MPIR_File_get_group_c(fh, group) &
    bind(C, name="PMPI_File_get_group") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_c_interface_types, ONLY : c_File, c_Group
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(c_Group), INTENT(out) :: group
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_get_group_c

FUNCTION MPIR_File_get_info_c(fh, info_used) &
    bind(C, name="PMPI_File_get_info") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_c_interface_types, ONLY : c_File, c_Info
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(c_Info), INTENT(out) :: info_used
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_get_info_c

FUNCTION MPIR_File_get_position_c(fh, offset) &
    bind(C, name="PMPI_File_get_position") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_f08_compile_constants, ONLY : MPI_OFFSET_KIND
    USE :: mpi_c_interface_types, ONLY : c_File
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(KIND=MPI_OFFSET_KIND), INTENT(out) :: offset
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_get_position_c

FUNCTION MPIR_File_get_position_shared_c(fh, offset) &
    bind(C, name="PMPI_File_get_position_shared") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_f08_compile_constants, ONLY : MPI_OFFSET_KIND
    USE :: mpi_c_interface_types, ONLY : c_File
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(KIND=MPI_OFFSET_KIND), INTENT(out) :: offset
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_get_position_shared_c

FUNCTION MPIR_File_get_size_c(fh, size) &
    bind(C, name="PMPI_File_get_size") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_f08_compile_constants, ONLY : MPI_OFFSET_KIND
    USE :: mpi_c_interface_types, ONLY : c_File
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(KIND=MPI_OFFSET_KIND), INTENT(out) :: size
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_get_size_c

FUNCTION MPIR_File_get_type_extent_c(fh, datatype, extent) &
    bind(C, name="PMPI_File_get_type_extent") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_f08_compile_constants, ONLY : MPI_ADDRESS_KIND
    USE :: mpi_c_interface_types, ONLY : c_File, c_Datatype
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(c_Datatype), VALUE, INTENT(in) :: datatype
    INTEGER(KIND=MPI_ADDRESS_KIND), INTENT(out) :: extent
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_get_type_extent_c

FUNCTION MPIR_File_get_view_c(fh, disp, etype, filetype, datarep) &
    bind(C, name="PMPI_File_get_view") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int, c_char
    USE :: mpi_f08_compile_constants, ONLY : MPI_OFFSET_KIND
    USE :: mpi_c_interface_types, ONLY : c_File, c_Datatype
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(KIND=MPI_OFFSET_KIND), INTENT(out) :: disp
    INTEGER(c_Datatype), INTENT(out) :: etype
    INTEGER(c_Datatype), INTENT(out) :: filetype
    character(kind=c_char), INTENT(out) :: datarep(*)
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_get_view_c

FUNCTION MPIR_File_open_c(comm, filename, amode, info, fh) &
    bind(C, name="PMPI_File_open") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int, c_char
    USE :: mpi_c_interface_types, ONLY : c_Comm, c_Info, c_File
    IMPLICIT NONE
    INTEGER(c_Comm), VALUE, INTENT(in) :: comm
    character(kind=c_char), INTENT(in) :: filename(*)
    INTEGER(c_int), VALUE, INTENT(in) :: amode
    INTEGER(c_Info), VALUE, INTENT(in) :: info
    INTEGER(c_File), INTENT(out) :: fh
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_open_c

FUNCTION MPIR_File_preallocate_c(fh, size) &
    bind(C, name="PMPI_File_preallocate") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_f08_compile_constants, ONLY : MPI_OFFSET_KIND
    USE :: mpi_c_interface_types, ONLY : c_File
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(KIND=MPI_OFFSET_KIND), VALUE, INTENT(in) :: size
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_preallocate_c

FUNCTION MPIR_File_seek_c(fh, offset, whence) &
    bind(C, name="PMPI_File_seek") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_f08_compile_constants, ONLY : MPI_OFFSET_KIND
    USE :: mpi_c_interface_types, ONLY : c_File
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(KIND=MPI_OFFSET_KIND), VALUE, INTENT(in) :: offset
    INTEGER(c_int), VALUE, INTENT(in) :: whence
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_seek_c

FUNCTION MPIR_File_seek_shared_c(fh, offset, whence) &
    bind(C, name="PMPI_File_seek_shared") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_f08_compile_constants, ONLY : MPI_OFFSET_KIND
    USE :: mpi_c_interface_types, ONLY : c_File
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(KIND=MPI_OFFSET_KIND), VALUE, INTENT(in) :: offset
    INTEGER(c_int), VALUE, INTENT(in) :: whence
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_seek_shared_c

FUNCTION MPIR_File_set_atomicity_c(fh, flag) &
    bind(C, name="PMPI_File_set_atomicity") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_c_interface_types, ONLY : c_File
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(c_int), VALUE, INTENT(in) :: flag
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_set_atomicity_c

FUNCTION MPIR_File_set_info_c(fh, info) &
    bind(C, name="PMPI_File_set_info") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_c_interface_types, ONLY : c_File, c_Info
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(c_Info), VALUE, INTENT(in) :: info
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_set_info_c

FUNCTION MPIR_File_set_size_c(fh, size) &
    bind(C, name="PMPI_File_set_size") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_f08_compile_constants, ONLY : MPI_OFFSET_KIND
    USE :: mpi_c_interface_types, ONLY : c_File
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(KIND=MPI_OFFSET_KIND), VALUE, INTENT(in) :: size
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_set_size_c

FUNCTION MPIR_File_set_view_c(fh, disp, etype, filetype, datarep, info) &
    bind(C, name="PMPI_File_set_view") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int, c_char
    USE :: mpi_f08_compile_constants, ONLY : MPI_OFFSET_KIND
    USE :: mpi_c_interface_types, ONLY : c_File, c_Datatype, c_Info
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(KIND=MPI_OFFSET_KIND), VALUE, INTENT(in) :: disp
    INTEGER(c_Datatype), VALUE, INTENT(in) :: etype
    INTEGER(c_Datatype), VALUE, INTENT(in) :: filetype
    character(kind=c_char), INTENT(in) :: datarep(*)
    INTEGER(c_Info), VALUE, INTENT(in) :: info
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_set_view_c

FUNCTION MPIR_File_sync_c(fh) &
    bind(C, name="PMPI_File_sync") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int
    USE :: mpi_c_interface_types, ONLY : c_File
    IMPLICIT NONE
    INTEGER(c_File), VALUE, INTENT(in) :: fh
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_File_sync_c

FUNCTION MPIR_Register_datarep_c(datarep, read_conversion_fn, write_conversion_fn, &
                                 dtype_file_extent_fn, extra_state) &
    bind(C, name="PMPI_Register_datarep") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int, c_char, c_funptr
    USE :: mpi_f08_compile_constants, ONLY : MPI_ADDRESS_KIND
    IMPLICIT NONE
    character(kind=c_char), INTENT(in) :: datarep(*)
    TYPE(c_funptr), VALUE :: read_conversion_fn
    TYPE(c_funptr), VALUE :: write_conversion_fn
    TYPE(c_funptr), VALUE :: dtype_file_extent_fn
    INTEGER(KIND=MPI_ADDRESS_KIND), INTENT(in) :: extra_state
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_Register_datarep_c

FUNCTION MPIR_Register_datarep_c_large(datarep, read_conversion_fn, write_conversion_fn, &
                                       dtype_file_extent_fn, extra_state) &
    bind(C, name="PMPI_Register_datarep_c") result(ierror)
    USE, intrinsic :: iso_c_binding, ONLY : c_int, c_char, c_funptr
    USE :: mpi_f08_compile_constants, ONLY : MPI_ADDRESS_KIND
    IMPLICIT NONE
    character(kind=c_char), INTENT(in) :: datarep(*)
    TYPE(c_funptr), VALUE :: read_conversion_fn
    TYPE(c_funptr), VALUE :: write_conversion_fn
    TYPE(c_funptr), VALUE :: dtype_file_extent_fn
    INTEGER(KIND=MPI_ADDRESS_KIND), INTENT(in) :: extra_state
    INTEGER(c_int) :: ierror
END FUNCTION MPIR_Register_datarep_c_large

END INTERFACE
END module mpi_c_interface_nobuf
